Address code review feedback: fix typos and improve code quality
Co-authored-by: levietducanh99 <182745573+levietducanh99@users.noreply.github.com>